# gxlimg

./: .gitignore  .travis.yml  LICENSE  Makefile  README  README.g12a  acs_tool.py  acs_tool3.py  amlcblk.c  amlcblk.h  amlsblk.c  amlsblk.h  bl2.c  bl2.h  bl3.c  bl3.h  fip.c  fip.h  gxlimg.h  main.c  meson.build  ssl.h
reveng/: aml_encrypt_gxl.decompiled  bl2.decompiled
